<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkgnd"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextNumber3"
        android:layout_width="143dp"
        android:layout_height="62dp"
        android:autofillHints=""
        android:backgroundTint="#0288D1"
        android:backgroundTintMode="add"
        android:ems="10"
        android:hint="@string/enter_here"
        android:inputType="number"
        android:textColorHint="#E0F2F1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.866"
        app:layout_constraintStart_toEndOf="@+id/editTextText4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.588" />

    <TextView
        android:id="@+id/editTextText4"
        android:layout_width="237dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="text"
        android:text="Number of Items to serve? -:"
        android:textColor="#004D40"
        android:textSize="18dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        app:layout_constraintVertical_bias="0.456" />

    <TextView
        android:id="@+id/editTextText3"
        android:layout_width="233dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="text"
        android:text="Provide Cuttlery?  -:"
        android:textSize="18dp"
        android:textColor="#4A148C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        app:layout_constraintVertical_bias="0.276" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="146dp"
        android:layout_height="60dp"
        android:backgroundTint="#0288D1"
        android:backgroundTintMode="add"
        android:ems="10"
        android:hint="Enter Here"
        android:inputType="number"
        android:textColorHint="#FFEBEE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/editTextText2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.335" />

    <TextView
        android:id="@+id/editTextText2"
        android:layout_width="231dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="#1A237E"
        android:text="Number of Plates?  -:"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        app:layout_constraintVertical_bias="0.11" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FBC02D"
        android:text="@string/feed_in_need_for_u"
        android:textStyle="bold"
        android:textColor="#2884E0"
        android:textSize="40sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="392dp"
        android:layout_height="61dp"
        android:backgroundTint="#1565C0"
        android:backgroundTintMode="src_over"
        android:breakStrategy="high_quality"
        android:ems="10"
        android:hint="@string/please_enter_reason_for_donation_here"
        android:inputType="text"
        android:selectAllOnFocus="false"
        android:singleLine="false"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.211" />

    <Button
        android:id="@+id/button"
        android:layout_width="179dp"
        android:layout_height="70dp"
        android:backgroundTint="#2C510B"
        android:onClick="locationpage"
        android:text="@string/next"
        android:textColor="#FBC02D"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.946" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="126dp"
        android:layout_height="49dp"
        android:switchPadding="@dimen/margin_xlarge"
        android:text="Switch"
        android:textColor="#D32F2F"
        android:textOff="@string/no"
        android:textOn="@string/yes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/editTextText3"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2"
        app:layout_constraintVertical_bias="0.09"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_are_doing_a_nobel_work"
        android:textColor="#304FFE"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.943" />

</androidx.constraintlayout.widget.ConstraintLayout>