<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pg2bkgnd"
    tools:context=".Servelocationstarter">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FBC02D"
        android:text="@string/feed_in_need_for_u"
        android:textStyle="bold"
        android:textColor="#DD2C00"
        android:textSize="40sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004" />
    <TextView
        android:id="@+id/massdisp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#1A237E"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.594" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="340dp"
        android:text="@string/enter_pin_below"
        android:textColor="#00796B"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextpin"
        android:layout_width="240dp"
        android:layout_height="56dp"
        android:autofillHints=""
        android:backgroundTint="#D32F2F"
        android:backgroundTintMode="add"
        android:ems="10"
        android:hint="@string/pin_here"
        android:textColorHint="#B71C1C"
        android:inputType="number"
        android:textColor="#FF6F00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.128"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/button2"
        android:layout_width="156dp"
        android:layout_height="61dp"
        android:backgroundTint="#00BCD4"
        android:onClick="finalshow"
        android:text="NEXT"
        android:textColor="#EF6C00"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.916" />

</androidx.constraintlayout.widget.ConstraintLayout>